# angular-bazel-example

src/: tsconfig.json
src/reducers/: BUILD.bazel  reducers.ts
