load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "reducers",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@ngrx/store",
    ],
    # Couldn't get default compiler to use tsickle
    compiler = "@build_bazel_rules_typescript//internal:tsc_wrapped_bin",
)
